# POSordersystem

./: .env.portable  CARA-PAKAI.md  README.md  buat-paket.bat  composer.json  install.bat  package-lock.json  start.bat  stop.bat
POS software/: database.py  main.py  pos_system.db  run.bat
POS software/cpp/: CMakeLists.txt  build.bat
POS software/cpp/src/: database.cpp  database.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  styles.h
POS software/cpp/src/pages/: dashboardpage.cpp  dashboardpage.h  expensespage.cpp  expensespage.h  historypage.cpp  historypage.h  inventorypage.cpp  inventorypage.h  pospage.cpp  pospage.h  productspage.cpp  productspage.h  reportspage.cpp  reportspage.h  settingspage.cpp  settingspage.h  supplierspage.cpp  supplierspage.h  userspage.cpp  userspage.h
POS software/golang/: build.bat  go.mod  go.sum  main.go  pos_system.db  pos_system.db-shm  pos_system.db-wal
POS software/pages/: __init__.py  dashboard.py  expenses.py  history.py  inventory.py  pos_cashier.py  products.py  reports.py  settings_page.py  suppliers.py  users.py
app/Events/: NewOrderPlaced.php  OrderStatusUpdated.php  PaymentReceived.php
app/Helpers/: SettingsHelper.php
app/Models/: Category.php  MenuItem.php  Order.php  OrderItem.php  Payment.php  SiteSetting.php  Table.php
database/migrations/: 2026_03_02_211323_create_menu_items_table.php  2026_03_02_211323_create_tables_table.php  2026_03_02_211324_create_orders_table.php  2026_03_02_211325_create_order_items_table.php  2026_03_02_221051_add_payment_fields_to_orders_table.php  2026_03_02_221051_create_payments_table.php
database/seeders/: DatabaseSeeder.php
resources/css/: app.css
routes/: channels.php  web.php
(+47 files in other folders)
